--- a/images/icomoon/style.css
+++ b/images/icomoon/style.css
@@ -46,3 +46,7 @@ Single-colored icons can be modified like so:
 .icon-phone {
   width: 0.625em;
 }
+
+.icon-email-black {
+  width: 1.3330078125em;
+}
